# mcbean

./: .gitignore  AGENTS.md  Cargo.toml  justfile
.config/tracey/: config.styx
docs/spec/: editor.md
graphql/: convert_pr_to_draft.graphql  mark_pr_ready_for_review.graphql  schema.graphql
migrations/2025-03-21-000000_initial/: down.sql  up.sql
migrations/2026-03-21-022823-0000_add_repo_synced_sha/: down.sql  up.sql
migrations/2026-03-21-030543-0000_drop_proposal_spec_id/: down.sql  up.sql
migrations/2026-03-21-083640-0000_loro_crdt/: down.sql
migrations/2026-03-21-083640_loro_crdt/: up.sql
migrations/2026-03-22-000000_lifecycle_states/: down.sql  up.sql
migrations/2026-03-23-045300-0000_proposal_id_overrides/: down.sql  up.sql
migrations/2026-03-23-125526-0000_add_archived_status/: down.sql  up.sql
migrations/2026-03-23-130526-0000_add_updated_at_triggers/: down.sql  up.sql
migrations/2026-03-23-134400-0000_add_profile_pic_url_to_users/: down.sql  up.sql
src/: app.rs  auth.rs  components.rs  db.rs  github.rs  lib.rs  main.rs  pages.rs  server.rs  sync.rs  tracey_config.rs
src/components/: avatar.rs  changelog_sidebar.rs  editor.rs  finalise_fab.rs  finalising_view.rs  loro_doc.rs  nav.rs  proposal_fab.rs  sidebar.rs  spec_block_editor.rs  spec_viewer.rs
src/db/: models.rs  schema.rs
src/pages/: home.rs  proposal.rs  repo.rs  spec.rs
style/: main.css
