[package]
name = "mcbean"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8.8", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
deadpool-diesel = { version = "0.6.1", features = ["postgres"], optional = true }
diesel = { version = "2.3.7", features = ["postgres"], optional = true }
hex = { version = "0.4.3", optional = true }
jiff = { version = "0.2.23", features = ["serde"] }
jiff-diesel = { version = "0.1.3", features = ["postgres"], optional = true }
leptos = "0.8.17"
leptos_axum = { version = "0.8.8", optional = true }
leptos_meta = "0.8.6"
leptos_router = "0.8.12"
rand = { version = "0.10.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"], optional = true }
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.8", features = ["fs", "trace"], optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"], optional = true }
wasm-bindgen = { version = "0.2.114", optional = true }

[features]
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:axum",
    "dep:leptos_axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:diesel",
    "dep:deadpool-diesel",
    "dep:rand",
    "dep:hex",
    "dep:jiff-diesel",
    "dep:tracing",
    "dep:tracing-subscriber",
]

[package.metadata.leptos]
output-name = "mcbean"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "[::1]:5050"
reload-port = 5055
bin-features = ["ssr"]
lib-features = ["hydrate"]
