[package]
name = "mcbean"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.102", optional = true }
axum = { version = "0.8.8", optional = true }
base64 = { version = "0.22.1", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
deadpool-diesel = { version = "0.6.1", features = ["postgres"], optional = true }
diesel = { version = "2.3.7", features = ["postgres", "serde_json"], optional = true }
facet-styx = { version = "3.0.0", optional = true }
globset = { version = "0.4.18", optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
hex = { version = "0.4.3", optional = true }
jiff = { version = "0.2.23", features = ["serde"] }
jiff-diesel = { version = "0.1.3", features = ["postgres"], optional = true }
js-sys = { version = "0.3.91", optional = true }
leptos = "0.8.17"
leptos_axum = { version = "0.8.8", optional = true }
leptos_meta = "0.8.6"
leptos_router = "0.8.12"
loro = { version = "1.10.8", optional = true }
marq = { version = "2.0.0", optional = true }
rand = { version = "0.10.0", optional = true }
reqwest = { version = "0.13.2", features = ["json", "query"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
thiserror = { version = "2.0.18", optional = true }
tokio = { version = "1.50.0", features = ["full"], optional = true }
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.8", features = ["fs", "trace"], optional = true }
tracey-config = { version = "1.3.0", optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"], optional = true }
wasm-bindgen = { version = "0.2.114", optional = true }
web-sys = { version = "0.3.91", features = ["BeforeUnloadEvent", "KeyboardEvent", "Storage", "Window"], optional = true }


[features]
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:web-sys",
    "dep:marq",
    "dep:gloo-timers",
    "dep:js-sys",
    "dep:serde_json",
    "dep:loro",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:axum",
    "dep:leptos_axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:diesel",
    "dep:deadpool-diesel",
    "dep:rand",
    "dep:hex",
    "dep:jiff-diesel",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:reqwest",
    "dep:base64",
    "dep:thiserror",
    "dep:tracey-config",
    "dep:facet-styx",
    "dep:globset",
    "dep:marq",
    "dep:anyhow",
    "dep:loro",
    "dep:serde_json",
]


[package.metadata.leptos]
output-name = "mcbean"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "[::1]:5050"
reload-port = 5055
bin-features = ["ssr"]
lib-features = ["hydrate"]
